# cercepcron

./: .gitignore  CMakeLists.txt  README.md  circles_and_squares.c  perceptron.c  perceptron.h
